# school21

./: 21.code-workspace  CMakeLists.txt  Logger.cpp  Makefile  README.md  c_cpp_properties.json  libft.h  makefile.srcs
born2root/: signature.txt
fdf/: Makefile  argv_handler.c  color.c  converter.c  display_map.c  draw_line.c  draw_map.c  draw_point.c  events_masks.h  fdf  fdf.h  key_codes.h  key_cods.h  main.c  trgb.c
ft_containers/: Makefile  makefile.srcs
ft_gnl/: .gitignore  get_next_line.c  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils_bonus.c
ft_inception/: clean.sh  makefile
ft_irc/: Makefile
ft_printf/: Makefile  ft_printf.c  ft_printf.h  ft_printf_aplay_handlers.c  ft_printf_apply_handlers.c  ft_printf_c_handler.c  ft_printf_chandler.c  ft_printf_di_handler.c  ft_printf_diu_handler.c  ft_printf_flag_handler.c  ft_printf_get_conversions.c  ft_printf_getconversion.c  ft_printf_getres.c  ft_printf_isconvsymbol.c  ft_printf_p_handler.c  ft_printf_prc_handler.c  ft_printf_s_handler.c  ft_printf_update_args_res.c  ft_printf_wp_handler.c  ft_printf_xX_handler.c
ft_webserver/: README.md  defaultConfig  index.html  makefile.srcs
headers/: Config.hpp  Server.h  Server.hpp  utils.hpp
includes/: Logger.hpp  Server.h  raii_ptr.h  server.h
libft/: .gitignore  Makefile  ft_atoi.c  ft_bzero.c  ft_bzero.d  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  (+34 more)
(+715 files in other folders)
